--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="first-box">
     <p class="firsttext">防災によって救われる命を増やすために。</p>
     <p class="secondtext">KOYOはベストを尽くします。</p>
-    <img src="_e_town0200_s512_town0200_0.png" class="firstimg">
+    <img src="https://github.com/akihiroTN/homepage.io/blob/main/_e_town0200_s512_town0200_0.png?raw=true" class="firstimg">
   </div>
     
   <div class="content">
